--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       </a>
       <b onclick="app.carsController.viewCars()">Cars</b>
       <b onclick="app.housesController.viewHouses()">Houses</b>
-      <b onclick="">Jobs</b>
     </nav>
   </header>
   <main>
@@ -53,7 +52,7 @@
             </div>
             <div class="modal-body" id="form-body">
               <!-- form part -->
-              <!-- NOTE car from moved to components get car from -->
+              <!-- NOTE car form moved to components get car form -->
               <!-- form part -->
             </div>
           </div>
@@ -64,11 +63,6 @@
 
     </div>
   </main>
-  <footer class="bg-dark text-light">
-    <div class="text-center no-select">
-      <p><small>Made with 💖 by Codeworks</small></p>
-    </div>
-  </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.23.0/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
